# velorag

./: .gitignore  README.md
src/: .env.example  mock_headlines.txt  requirements.txt  streamer.py
src/cpp_engine/: CMakeLists.txt
src/cpp_engine/src/: main.cpp
src/python_agents/: agent_brain.py
